# camping_backend

./: .env.sample  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt  settings.py
campgrounds/: admin.py  api.py  apps.py  models.py  schema.py
campgrounds/apis/: __init__.py  amenity.py  api.py  campground.py
campings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
campings/migrations/: 0001_initial.py  0002_campground_tags.py  0003_campground_ev_friendly_campground_pet_friendly_and_more.py
campings/tests/: test_campground_api.py  test_model.py  test_model_camping.py  test_model_camping_create_with_tag.py
common/: schema.py
config/: apis.py  settings.py  urls.py  views.py
medias/: admin.py  models.py  serializers.py  urls.py  views.py
medias/tests/: test_image_apis.py
tags/: admin.py  models.py  serializers.py  urls.py  views.py
tags/migrations/: 0001_initial.py
tags/tests/: test_tags_model.py
users/: admin.py  api.py  models.py  serializers.py  shcema.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_user_api.py
