[tool.poetry]
name = "camping_backend"
version = "0.1.0"
description = ""
authors = ["woohaen88 <woohaen88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
cryptography = ">=40.0.2"
Django = ">=4.2"
django-cors-headers = ">=3.14.0"
django-environ = ">=0.10.0"
djangorestframework = ">=3.14.0"
djangorestframework-simplejwt = ">=5.2.2"
drf-spectacular = ">=0.26.2"
drf-spectacular-sidecar = ">=2023.4.1"
gunicorn = ">=20.1.0"
idna = ">=3.4"
inflection = ">=0.5.1"
jsonschema = ">=4.17.3"
Pillow = ">=9.5.0"
pip = ">=23.1"
pycparser = ">=2.21"
pydantic = ">=1.10.7"
PyJWT = ">=2.6.0"
pymysql = ">=1.0.3"
pyrsistent = ">=0.19.3"
pytz = ">=2023.3"
PyYAML = ">=6.0"
requests = ">=2.28.2"
setuptools = ">=65.5.0"
sqlparse = ">=0.4.4"
typing-extensions = ">=4.5.0"
uritemplate = ">=4.1.1"
urllib3 = ">=1.26.15"
wheel = ">=0.40.0"
django-cloudflare-images = "^0.5.2"
whitenoise = "^6.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
